<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="com.kdy_soft.truck.ui.login.SignupViewModel" />

        <variable
            name="viewModel"
            type="SignupViewModel" />
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="@dimen/logo_size"
            android:layout_height="@dimen/logo_size"
            android:scaleType="centerCrop"
            android:src="@mipmap/ic_launcher_round" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_normal"
            android:padding="@dimen/margin_normal">

            <TextView
                android:id="@+id/labelName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:minWidth="76dp"
                android:text="@string/label_name"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                app:layout_constraintBottom_toBottomOf="@+id/editName"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/editName" />

            <EditText
                android:id="@+id/editName"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_normal"
                android:gravity="center"
                android:hint="@string/label_name"
                android:inputType="text"
                android:maxLength="10"
                android:maxLines="1"
                android:text="@={viewModel.name}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/labelName"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/labelMobile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:minWidth="76dp"
                android:text="@string/label_mobile"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                app:layout_constraintBottom_toBottomOf="@+id/editMobile"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/editMobile" />

            <EditText
                android:id="@+id/editMobile"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_normal"
                android:layout_marginTop="@dimen/margin_normal"
                android:layout_marginEnd="@dimen/margin_normal"
                android:gravity="center"
                android:hint="@string/hint_mobile"
                android:inputType="text"
                android:maxLength="15"
                android:maxLines="1"
                android:text="@={viewModel.mobile}"
                app:layout_constraintEnd_toStartOf="@id/checkMobile"
                app:layout_constraintStart_toEndOf="@id/labelMobile"
                app:layout_constraintTop_toBottomOf="@id/editName" />

            <Button
                android:id="@+id/checkMobile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/check_overlap"
                app:layout_constraintBottom_toBottomOf="@id/editMobile"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/editMobile" />

            <TextView
                android:id="@+id/labelCarNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:minWidth="76dp"
                android:text="@string/label_car_number"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                app:layout_constraintBottom_toBottomOf="@+id/editCarNumber"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/editCarNumber" />

            <EditText
                android:id="@+id/editCarNumber"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_normal"
                android:layout_marginTop="@dimen/margin_normal"
                android:layout_marginEnd="@dimen/margin_normal"
                android:gravity="center"
                android:hint="@string/hint_car_number"
                android:inputType="text"
                android:maxLength="15"
                android:maxLines="1"
                android:text="@={viewModel.carNumber}"
                app:layout_constraintEnd_toStartOf="@id/checkCarNumber"
                app:layout_constraintStart_toEndOf="@+id/labelCarNumber"
                app:layout_constraintTop_toBottomOf="@+id/editMobile"
                tools:ignore="TextFields" />

            <Button
                android:id="@+id/checkCarNumber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/check_overlap"
                app:layout_constraintBottom_toBottomOf="@id/editCarNumber"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/editCarNumber" />

            <TextView
                android:id="@+id/labelCarKinds"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:minWidth="76dp"
                android:text="@string/label_car_kinds"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                app:layout_constraintBottom_toBottomOf="@id/spinnerCarKinds"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/spinnerCarKinds" />

            <Spinner
                android:id="@+id/spinnerCarKinds"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_normal"
                android:layout_marginTop="@dimen/margin_normal"
                android:gravity="center"
                android:hint="@string/label_name"
                android:inputType="text"
                android:textAlignment="center"
                android:maxLength="10"
                android:maxLines="1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/labelCarKinds"
                app:layout_constraintTop_toBottomOf="@+id/editCarNumber"
                app:layout_goneMarginStart="@dimen/margin_normal" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/signupButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_normal"
                android:onClick="@{viewModel::signup}"
                android:text="@string/signup"
                app:layout_constraintTop_toBottomOf="@id/spinnerCarKinds" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/cancelButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_normal"
                android:onClick="@{viewModel::cancel}"
                android:text="@string/cancel"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/signupButton" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

</layout>