<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="com.kdy_soft.truck.ui.login.LoginViewModel" />

        <variable
            name="viewModel"
            type="com.kdy_soft.truck.ui.login.LoginViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/logoImage"
            android:layout_width="@dimen/logo_size"
            android:layout_height="@dimen/logo_size"
            android:src="@drawable/truck"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.2" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/googleLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_normal"
            android:layout_marginTop="@dimen/margin_normal"
            android:onClick="@{viewModel::googleLogin}"
            android:text="@string/google_login"
            app:layout_constraintTop_toBottomOf="@id/logoImage" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/kakaoLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_normal"
            android:layout_marginTop="@dimen/margin_normal"
            android:onClick="@{viewModel::kakaoLogin}"
            android:text="@string/kakao_login"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/googleLogin" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/emailLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_normal"
            android:layout_marginTop="@dimen/margin_normal"
            android:onClick="@{viewModel::emailLogin}"
            android:text="@string/email_login"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@id/kakaoLogin" />

        <ProgressBar
            android:id="@+id/loading"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:max="100"
            isGone="@{!viewModel.loading}"
            android:indeterminate="true"
            android:translationZ="@dimen/margin_normal"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>