<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="com.kdy_soft.truck.ui.viewModel.DriverHelperViewModel" />
        <variable
            name="onCompleteListener"
            type="android.view.View.OnClickListener" />
        <variable
            name="viewModel"
            type="DriverHelperViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/deadline"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@{viewModel.deadline}"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"
                android:textColor="@android:color/holo_red_light"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="04:12:30" />

            <TextView
                android:id="@+id/currentLocation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_normal"
                android:gravity="center"
                android:lines="2"
                android:text="@{viewModel.departure}"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                android:textColor="@android:color/darker_gray"
                app:layout_constraintTop_toBottomOf="@id/deadline"
                tools:text="충남 천안시 서북구 두정 3길 " />

            <ImageView
                android:id="@+id/arrowDown"
                android:layout_width="@dimen/image_button_size"
                android:layout_height="@dimen/image_button_size"
                android:layout_marginTop="@dimen/margin_small"
                android:contentDescription="@string/arrow"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_baseline_keyboard_arrow_down_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/currentLocation" />

            <TextView
                android:id="@+id/destination"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_small"
                android:gravity="center"
                android:lines="2"
                android:text="@{viewModel.destination}"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Body2"
                android:textColor="@android:color/darker_gray"
                app:layout_constraintTop_toBottomOf="@id/arrowDown"
                tools:text="서울특별시 서울시청" />

            <TextView
                android:id="@+id/labelRestDistance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_normal"
                android:layout_marginTop="@dimen/margin_normal"
                android:text="@string/rest_dist"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/destination" />

            <TextView
                android:id="@+id/restDistance"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_normal"
                android:layout_marginEnd="@dimen/margin_normal"
                android:gravity="start"
                android:text="@{viewModel.restDistance}"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/labelRestDistance"
                app:layout_constraintTop_toTopOf="@id/labelRestDistance"
                tools:text="32km" />

            <TextView
                android:id="@+id/labelApproxTime"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_normal"
                android:layout_marginTop="@dimen/margin_normal"
                android:text="@string/approx_time"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/labelRestDistance" />

            <TextView
                android:id="@+id/approxTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_normal"
                android:layout_marginEnd="@dimen/margin_normal"
                android:gravity="start"
                android:text="@{viewModel.approxTime}"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/labelApproxTime"
                app:layout_constraintTop_toTopOf="@id/labelApproxTime"
                tools:text="19:30" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/complete"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/done"
                android:onClick="@{onCompleteListener}"
                app:layout_constraintTop_toBottomOf="@id/approxTime"
                android:layout_margin="@dimen/margin_normal"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</layout>